LPFG-375 Squashed commits: [90fb402] minify css [888a48c] logging and cleaning [561ed28] check pages, if error, throw [ea1331e] management ui [fc3d891] tidy [10127af] discite course / module / search [77b8737] split up discite course [5d63ed4] remove old templating wrapper [e584389] add svelte script and delete some files [09b0b2c] search page and update readme [fbd3969] course pages [d14478e] profile pages [3f07458] use $i18n, $datetime, learning record page and suggestions page [279b582] HomePage and child components [a1ef446] readme [a4d198b] start some docs [d9159f8] WIP [055248b] using stores [d2e7f32] wip [7e0eed4] WIP [2af2b81] wip [c3d0094] wip [fbbbe98] svelte [be5aab6] refactor discite courses

--- a/src/management-ui/component/Event.html
+++ b/src/management-ui/component/Event.html
@@ -12,33 +12,30 @@
             </th>
         </tr>
     </thead>
-    {{#each events as event, i}}
+    {#each events as event, i}
     <tbody>
         <tr>
             <td class="key-value-list__value key-value-list__auto--auto lpg-date">
-                {{#if event.id}}
-                <input type="hidden" id="event_id_{{i}}" name="id" value="{{ event.id }} "> {{/if}}
-                <input class="form-control form-control-2-3" id="event_date_{{i}}" name="event_date" type="date" value="{{ (event.date? datetime.HTMLFormatDate(event.date) : '') }}">
+                {#if event.id}
+                <input type="hidden" id="event_id_{i}" name="id" value="{ event.id } "> {/if}
+                <input class="form-control form-control-2-3" id="event_date_{i}" name="event_date" type="date" value="{ (event.date? $datetime.HTMLFormatDate(event.date) : '') }">
             </td>
             <td class="key-value-list__value key-value-list__auto--auto lpg-location">
-                <input class="form-control form-control-2-3" id="event_location_{{i}}" name="event_location" type="text" value="{{ event.location || '' }}">
+                <input class="form-control form-control-2-3" id="event_location_{i}" name="event_location" type="text" value="{ event.location || '' }">
             </td>
             <td class="key-value-list__item-action">
-                {{#if i !== 0 }}
-                <button name="submit" type="submit" class="button audience__button--remove" value="remove_event_{{i}}">Remove</button>
-                {{/if}}
+                {#if i !== 0 }
+                <button name="submit" type="submit" class="button audience__button--remove" value="remove_event_{i}">Remove</button>
+                {/if}
             </td>
         </tr>
 
         <tr>
             <td class="key-value-list__item-action" colspan="3 ">
-                {{#if i === events.length-1 }}
-                <button name="submit" type="submit" class="button" value="add_event ">Add Event</button>{{/if}}
+                {#if i === events.length-1 }
+                <button name="submit" type="submit" class="button" value="add_event ">Add Event</button>{/if}
             </td>
         </tr>
     </tbody>
-    {{/each}}
+    {/each}
 </table>
-<p>
-
-</p>
