--- a/src/management-ui/component/Header.html
+++ b/src/management-ui/component/Header.html
@@ -12,3 +12,18 @@
 </header>
 
 <div id="global-header-bar"></div>
+
+<script>
+	import Nav from './Nav.html'
+
+	export default {
+		data() {
+			return {
+			}
+		},
+
+		components: {
+			Nav
+		}
+	}
+</script>
