--- a/src/ui/component/Header.html
+++ b/src/ui/component/Header.html
@@ -26,3 +26,17 @@
             <a class="lpg-feedback-link" href="https://www.smartsurvey.co.uk/s/QNJEE/" target="_blank">feedback</a>&nbsp;will help us to improve it.</span>
     </p>
 </div>
+
+<script>
+	import Nav from './Nav.html';
+
+	export default {
+		data() {
+			return {
+			}
+		},
+		components: {
+			Nav
+		}
+	};
+</script>
