--- a/src/management-ui/component/Selects.html
+++ b/src/management-ui/component/Selects.html
@@ -1,4 +1,26 @@
-{{#if optionType === 'checkbox'}}
-<Checkboxes :options :node :values /> {{elseif optionType === 'radio'}}
-<Radios :options :node :values />{{elseif optionType === 'date'}}
-<Date :options :node :values /> {{/if}}
+{#if optionType === 'checkbox'}
+    <Checkboxes {options} {node} {values} />
+{:elseif optionType === 'radio'}
+    <Radios {options} {node} {values} />
+{:elseif optionType === 'date'}
+    <Date {options} {node} {values} />
+{/if}
+
+<script>
+	import Checkboxes from './Checkboxes.html'
+	import Radios from './Radios.html'
+	import Date from './Date.html'
+
+	export default {
+		data() {
+			return {
+			}
+		},
+
+		components: {
+		    Checkboxes,
+		    Radios,
+		    Dates
+		}
+	}
+</script>
