--- a/src/ui/component/Layout.html
+++ b/src/ui/component/Layout.html
@@ -10,5 +10,25 @@
 	</div>
 </main>
 
-<Feedback :_csrf />
+<Feedback {_csrf} />
 <Footer/>
+
+<script>
+
+    import Footer from './Footer.html';
+    import Feedback from './Feedback.html';
+
+
+	export default {
+		data() {
+			return {
+
+			}
+		},
+		components: {
+			Footer,
+			Feedback,
+
+		}
+	};
+</script>
