--- a/src/ui/component/Selects.html
+++ b/src/ui/component/Selects.html
@@ -1,7 +1,26 @@
-{{#if optionType === 'typeahead'}}
-    <TypeAhead :options :inputName :script :label :value />
-{{elseif optionType === 'checkbox'}}
-    <Checkboxes :options :inputName :script :value />
-{{elseif optionType === 'radio'}}
-	<NewRadios :options :inputName :script :value />
-{{/if}}
+{#if optionType === 'typeahead'}
+    <TypeAhead {options} {inputName} {script} {label} {value} />
+{:elseif optionType === 'checkbox'}
+    <Checkboxes {options} {inputName} {script} {value} />
+{:elseif optionType === 'radio'}
+	<NewRadios {options} {inputName} {script} {value} />
+{/if}
+
+<script>
+	import TypeAhead from './TypeAhead.html'
+	import Checkboxes from './Checkboxes.html'
+	import NewRadios from './NewRadios.html'
+
+	export default {
+		data() {
+			return {
+			}
+		},
+
+		components: {
+		    TypeAhead,
+		    Checkboxes,
+		    NewRadios
+		}
+	}
+</script>
