--- a/src/ui/component/disciteParts/DisciteModuleMain.html
+++ b/src/ui/component/disciteParts/DisciteModuleMain.html
@@ -1,6 +1,6 @@
 <div class="discite__main discite__main--module">
-  <h3 class="heading bold-small heading--text">{{module.title}}</h3>
-  {{#if module.description}}
-      <p class="discite__description">{{module.description}}</p>
-  {{/if}}
+  <h3 class="heading bold-small heading--text">{module.title}</h3>
+  {#if module.description}
+      <p class="discite__description">{module.description}</p>
+  {/if}
 </div>
