--- a/src/management-ui/component/Date.html
+++ b/src/management-ui/component/Date.html
@@ -1,1 +1,1 @@
-<input class="form-control form-control-2-3" id="required-by" name="required" type="date" value="{{ values ? datetime.HTMLFormatDate(values) : '' }}">
+<input class="form-control form-control-2-3" id="required-by" name="required" type="date" value="{ values ? datetime.HTMLFormatDate(values) : '' }">
