--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -53,13 +53,15 @@
             {{/if}}
         {{else}}
             {{#if module.type === 'elearning'}}
-                <a href="{{module.url}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+				<a href="{{module.url}}">{{ i18n('action_' + (module.state || 'NOT_STARTED' )) }} <span class="visuallyhidden"> this module</span></a>
+			{{elseif module.type === 'video'}}
+				<a href="/courses/{{course.id}}/{{module.id}}">{{ module.state !== 'COMPLETED' ? i18n('action_' + (module.state || 'NOT_STARTED' )) : i18n('action_video_COMPLETED') }} <span class="visuallyhidden"> this module</span></a>
             {{elseif module.type === 'file'}}
                 <a download="{{fileHelpers.fileName(module.url)}}" href="{{module.url}}">
                     Download document
                 </a> ({{fileHelpers.extension(module.url)}} {{fileHelpers.appropriateFileSize(module.fileSize)}})
-
-            {{/if}}
+			{{/if}}
+			
 
         {{/if}}
     </div>
