--- a/src/ui/component/Layout.html
+++ b/src/ui/component/Layout.html
@@ -12,3 +12,23 @@
 
 <Feedback {_csrf} />
 <Footer/>
+
+<script>
+
+    import Footer from './Footer.html';
+    import Feedback from './Feedback.html';
+
+
+	export default {
+		data() {
+			return {
+
+			}
+		},
+		components: {
+			Footer,
+			Feedback,
+
+		}
+	};
+</script>
