--- a/src/ui/component/PageTest.html
+++ b/src/ui/component/PageTest.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="/styles/main.css?v=">
 	<link rel="stylesheet" href="/styles/video-js.min.css">
     <script src="/js/jquery.min.js"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id="></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id={($config.GOOGLE_ANALYTICS_ID)}"></script> {@html $config.GOOGLE_ANALYTICS_CODE}
 </head>
 <body>
     <Header />
