--- a/src/ui/component/DisciteFeedback.html
+++ b/src/ui/component/DisciteFeedback.html
@@ -29,7 +29,7 @@
     <div class="discite__properties  u-clearfix">
         <ul class="discite__property ">
             <li class="discite__property-item">
-                <span class="visuallyhidden">Type:</span> {i18n(module.type)}
+                <span class="visuallyhidden">Type:</span> {$i18n(module.type)}
             </li>
             <li class="discite__property-item">
                 <span class="visuallyhidden">Duration:</span> {module.getDuration() || ''}
