--- a/src/ui/component/Nav.html
+++ b/src/ui/component/Nav.html
@@ -5,12 +5,12 @@
     </a>
 
     <ul id="proposition-links">
-        {#if signedInUser} {#if signedInUser.hasCompleteProfile()}
+        {#if $signedInUser} {#if $signedInUser.hasCompleteProfile()}
         <li>
             <a href="/home">Home</a>
         </li>
         <li>
-            <a href="/suggestions-for-you">{i18n('suggestions_page_title')}</a>
+            <a href="/suggestions-for-you">{$i18n('suggestions_page_title')}</a>
         </li>
         <li>
             <a href="/learning-record">Learning record</a>
