--- a/src/ui/component/disciteParts/DisciteModuleProperties.html
+++ b/src/ui/component/disciteParts/DisciteModuleProperties.html
@@ -1,7 +1,7 @@
 <div class="discite__properties {modifier ? `discite__properties--${modifier}` : ''} u-clearfix">
     <ul class="discite__property {modifier ? `discite__property--${modifier}` : ''}">
         <li class="discite__property-item">
-            <span class="visuallyhidden">Type:</span> {i18n(module.type)}
+            <span class="visuallyhidden">Type:</span> {$i18n(module.type)}
         </li>
         <li class="discite__property-item">
             <span class="visuallyhidden">Duration:</span> {module.duration || ''}
