--- a/src/management-ui/component/DisciteModule.html
+++ b/src/management-ui/component/DisciteModule.html
@@ -10,11 +10,11 @@
     <div class="discite__properties discite__properties--module u-clearfix">
         <ul class="discite__property discite__property--module">
             <li class="discite__property-item">
-                <span class="visuallyhidden">Type:</span> {i18n(module.type)}
+                <span class="visuallyhidden">Type:</span> {$i18n(module.type)}
             </li>
             {#if module.duration }
                 <li class="discite__property-item">
-                    <span class="visuallyhidden">Duration:</span> {datetime.formatCourseDuration(module.duration)}
+                    <span class="visuallyhidden">Duration:</span> {$datetime.formatCourseDuration(module.duration)}
                 </li>
             {/if}
 
