--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -11,16 +11,16 @@
             <li class="discite__property-item">
                 {#if course.record && course.record.state && course.record.state !== 'RETRIEVED' && course.record.state !== 'ARCHIVED' }
                 <div class="discite__status">
-                    <span class="badge badge--discite badge--info">{i18n(course.record.state)}</span>
+                    <span class="badge badge--discite badge--info">{$i18n(course.record.state)}</span>
                     {#if course.getSelectedDate()}
-                    <span class="meta">{datetime.formatDate(course.getSelectedDate())}</span>
+                    <span class="meta">{$datetime.formatDate(course.getSelectedDate())}</span>
                     {/if}
                 </div>
                 {/if}
             </li>
             <li class="discite__property-item">
                 <span class="visuallyhidden">Type:</span>
-                <span class="lpg-course-type">{i18n(course.getType() || '' )}</span>
+                <span class="lpg-course-type">{$i18n(course.getType() || '' )}</span>
             </li>
             <li class="discite__property-item">
                 <span class="visuallyhidden">Duration:</span> {course.getDuration() || ''}
@@ -46,7 +46,7 @@
     {/if}
     <div class="discite__area">
         {#if course.nextRequiredBy(signedInUser)}
-            Due by: {datetime.formatDate(course.nextRequiredBy(signedInUser))}
+            Due by: {$datetime.formatDate(course.nextRequiredBy(signedInUser))}
         {:elseif course.getAreasOfWork().length}
             Work area: {course.getAreasOfWork().map(function(aow) { return i18n('areas-of-work')[aow];}).join(', ')}
         {/if}
