--- a/src/ui/component/LearningRecordTable.html
+++ b/src/ui/component/LearningRecordTable.html
@@ -13,9 +13,10 @@
             <td>
                 <a href="/courses/{course.id}">{course.title} </a>
             </td>
-            <td>{i18n(course.getType())}</td>
+            <td>{$i18n(course.getType())}</td>
             <td>{course.getDuration() || '-'}</td>
-            <td>{datetime.formatDate(course.getCompletionDate(signedInUser))}</td>
+            <td>{course.getCompletionDate($signedInUser) ? $datetime.formatDate(course.getCompletionDate($signedInUser)) : ''}</td>
+
         </tr>
         {/each}
     </tbody>
