--- a/src/ui/component/NewPage.html
+++ b/src/ui/component/NewPage.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#0b0c0c" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="/img/opengraph-image.png">
-    <title>{title} &ndash; {i18n('proposition_name')}</title>
+    <title>{title} &ndash; {$i18n('proposition_name')}</title>
 	<link rel="stylesheet" href="/styles/main.css?v={config.VER}">
 	<link rel="stylesheet" href="/styles/video-js.min.css">
     <script src="/js/jquery.min.js"></script>
