--- a/src/ui/component/ProfileEditForm.html
+++ b/src/ui/component/ProfileEditForm.html
@@ -35,3 +35,17 @@
     </div>
     <input type="hidden" name="_csrf" value="{_csrf}">
 </form>
+<script>
+	import Selects from './Selects.html'
+
+	export default {
+		data() {
+			return {
+			}
+		},
+
+		components: {
+			Selects
+		}
+	}
+</script>
