--- a/src/ui/component/Page.html
+++ b/src/ui/component/Page.html
@@ -23,9 +23,11 @@
     <script src="/js/govuk_frontend_toolkit/govuk/show-hide-content.js"></script>
     <script src="/js/govuk_frontend_toolkit/govuk/modules.js"></script>
     <script src="/js/govuk_frontend_toolkit/govuk/govuk-template.js"></script>
-
+    <script type="text/javascript" src="/js/accessible-autocomplete.min.js"></script>
 
     <script src="/js/main.js"></script>
+
+
 </body>
 </html>
 
