--- a/src/ui/component/BookingTabContent.html
+++ b/src/ui/component/BookingTabContent.html
@@ -102,3 +102,18 @@
     </div>
 
 </div>
+
+<script>
+	import AccessibilityOptions from './AccessibilityOptions.html'
+
+	export default {
+		data() {
+			return {
+			}
+		},
+
+		components: {
+		    AccessibilityOptions
+		}
+	}
+</script>
