split up discite course

--- a/src/ui/component/disciteParts/DisciteModuleProperties.html
+++ b/src/ui/component/disciteParts/DisciteModuleProperties.html
@@ -12,5 +12,5 @@
             </li>
         {/if}
     </ul>
-    <div class="discite__status"><span class="badge badge--info ">{module.state ? i18n(module.state) : ''}</span></div>
+    <div class="discite__status"><span class="badge badge--info ">{module.state ? $i18n(module.state) : ''}</span></div>
 </div>
