discite course / module / search

--- a/src/ui/component/DisciteCourse.html
+++ b/src/ui/component/DisciteCourse.html
@@ -4,7 +4,7 @@
     </slot>
 
     <slot name="properties">
-        <DisciteCourseProperties {course} {modifier} {module}  />
+        <DisciteCourseProperties course={course} {modifier} {module}  />
     </slot>
 
     {#if course.modules.length > 1 }
