--- a/src/ui/component/DisciteModule.html
+++ b/src/ui/component/DisciteModule.html
@@ -1,12 +1,12 @@
 <div class="discite__item u-clearfix discite__item--module">
-	<slot name="main">
-	    <DisciteModuleMain {course} {modifier} {module} />
+    <slot name="main">
+	    <DisciteModuleMain {course} {module} />
     </slot>
 	<slot name="properties">
 	    <DisciteModuleProperties {course} {modifier} {module} />
     </slot>
 	<slot name="actions">
-        <DisciteModuleActions {course} {modifier} {module} />
+        <DisciteModuleActions {course} {module} />
     </slot>
 </div>
 <script>
